Add new GET endpoint for basic overview stats
